<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:id="@+id/rl_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_state"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_wifi_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"

                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_state"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/tv_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_strength"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_wifi_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"

                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_strength"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_speed"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_wifi_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"

                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_speed"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/tv_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_frequency"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_wifi_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"

                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_frequency"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_security"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_wifi_security"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"

                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>